[project]
name = "brobots-air-raid-alerts"
version = "2.0.0"
description = ""
authors = [{ name = "Andrew Yatsura", email = "andrewyazura203@gmail.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "environs>=9.5.0,<10",
    "python-telegram-bot==13.14",
    "pytz~=2023.3.post1",
    "requests>=2.31.0,<3",
    "peewee>=3.16.3,<4",
    "psycopg2-binary>=2.9.7,<3",
]

[dependency-groups]
dev = [
    "black>=23.9.1,<24",
    "ruff>=0.0.287,<0.0.288",
]
